# ADVANCED-RAG

./: .gitignore  Dockerfile  README.md  approaches.txt  pyproject.toml
data/: retrieved_news.json
rag/: __init__.py  agent.py  data.py  main.py  query.py  retriever.py
